          when upgrading existing configuration
          (http://www.packetfence.org/mantis/view.php?id=718)
        fixed Config::Inifiles compatibility issue in
          configurator.pl
          (http://www.packetfence.org/mantis/view.php?id=721)
        enhanced presentation in more_info.php
          (http://www.packetfence.org/mantis/view.php?id=722)


1.8.3
        fixed issue between connect_and_read.pl and
          Aironet
          (http://www.packetfence.org/mantis/view.php?id=692)
        fixed iptables generation with multiple internal
          interfaces
          (http://www.packetfence.org/mantis/view.php?id=693)
        fixed start date and end date in reports
          (http://www.packetfence.org/mantis/view.php?id=694)
        added italian translation
        fixed desAssociate trap handling
          (http://www.packetfence.org/mantis/view.php?id=695)
        fixed issues with terminal connections to Cisco gear
          (http://www.packetfence.org/mantis/view.php?id=696)
        added necessary taint check to pfcmd
          generate_switchport_vlan_assignment
          (http://www.packetfence.org/mantis/view.php?id=697)
        new nessus scans using nessusclient files
        fixed documentation regarding NIC configuration
          (http://www.packetfence.org/mantis/view.php?id=702)
        fixed web admin GUI violation config
          (http://www.packetfence.org/mantis/view.php?id=698)
        removed unused last_seen column from reports
          (http://www.packetfence.org/mantis/view.php?id=607)
        GET instead of POST requests in reports.php
          (http://www.packetfence.org/mantis/view.php?id=531)
        fixed issue in pfsetvlan when a switch was removed 
          from the switch config
          (http://www.packetfence.org/mantis/view.php?id=690)
        added new fields to person table
          (http://www.packetfence.org/mantis/view.php?id=701)
        fixed last column display in printer.php